--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     padding: 0;
     font-size: 16pt;
+    background-color: #faffff;
   }
 
 a{
@@ -53,6 +54,18 @@ iframe{
   height: 400px;
   max-height: 80%;
 }
+
+button{
+  background-color: #ff003f;
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 
 header{
 
