--- a/style/style.css
+++ b/style/style.css
@@ -7,14 +7,43 @@ body{
   }
 
 a{
+  color: #ff003f;
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+}
+nav{
+  background-color: rgb(48, 55, 103);
+  display: flex;
+  flex-direction: column;
+  flex-flow: row wrap;
+  justify-content: center;
+  text-align: center;
+}
+nav a{
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding: 10px 50px 10px 50px;
+}
+nav li{
+  padding: 3px;
+}
 
+nav a:hover{
+  text-decoration: underline;
+  background-color: rgba(255, 255, 255, .8);
+  color: black;
 }
 h1{
   font-size: 3em;
   align-items: center;
+  background-color: white;
+  padding: 30px;
 }
 P{
-
+padding:5px;
 }
 
 .skip a{
@@ -31,6 +60,7 @@ P{
 .skip a:focus{
   top: 0px;
 }
+
 :focus{
   outline: 2px solid black;
 }
@@ -49,7 +79,12 @@ li{
 }
 
 img{
-  max-width: 60%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:50%;
+  text-align:center;
+  padding:10px;
 }
 
 iframe{
@@ -57,6 +92,10 @@ iframe{
   max-width: 80%;
   height: 400px;
   max-height: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
 }
 
 button{
@@ -66,15 +105,42 @@ button{
   padding: 15px 30px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 60px;
 }
-
+.container{
+  padding: 20px;
+  padding-bottom: 70px;
+}
 
 header{
-
+  font-size: 15px;
+  text-align:center;
 }
 
+h2{
+  color: darkslateblue;
+  text-decoration:underline;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 24px;
+}
+
+h3{
+  color:darkslategray;
+  margin-top: 30px;
+  font-size: 22px;
+}
+h4{
+  margin-top: 20px;
+}
+.service ul li{
+  margin-top: 10px;
+}
 footer{
   background-color: black;
   color: white;
@@ -82,12 +148,12 @@ footer{
   padding: 30px;
 }
 
+@media all and (min-width:720px){
 
-@media screen and (min-width: 600px){
 
 }
 
-@media screen and (min-width: 1200px){
+@media all and (min-width:1200px){
 
   /* .nav-links{
     display:flex;
@@ -98,7 +164,6 @@ footer{
   } */
 
 }
-
 
 
 
