--- a/style/style.css
+++ b/style/style.css
@@ -127,7 +127,7 @@ h2{
   text-decoration:underline;
   margin-top: 30px;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 24px;
 }
 
 h3{
@@ -193,8 +193,69 @@ img{
   text-align: center;
   padding: 10px;
 }
+
+h2{
+  grid-column:2/-1;
+  grid-row:2;
+}
+
+#movements, #media, #networks, #deliberation, #charity{
+  grid-column:3;
+}
+
 .profile-img{
   grid-column: 2;
+}
+
+.news-img{
+  grid-column: 2;
+  /* grid-row: 3; */
+  width:90%;
+}
+
+.news-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.social-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.network-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.diss-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.charity-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.socialmedia-img{
+  grid-column: 2;
+  width:90%;
+}
+
+.network-img{
+  grid-column:2;
+  width:90%;
+}
+
+.diss-img{
+  grid-column:2;
+  width:90%;
+}
+
+.charity-img{
+  grid-column:2;
+  width:90%;
 }
 
 iframe{
@@ -212,9 +273,10 @@ form{
   grid-row: 2;
   font-size: 16px;
 }
-.text{
-  grid-column: 2/ span 2;
+.text {
+  grid-column: 2/-2;
 }
+
 
 
 
