--- a/style/style.css
+++ b/style/style.css
@@ -99,7 +99,7 @@ iframe{
 }
 
 button{
-  background-color: #ff003f;
+  background-color: darkred;
   border: none;
   color: white;
   padding: 15px 30px;
