--- a/style/style.css
+++ b/style/style.css
@@ -88,10 +88,12 @@ img{
 }
 
 iframe{
+  grid-column: 1/1;
+  grid-row: 3;
   width: 600px;
   max-width: 80%;
   height: 400px;
-  max-height: 80%;
+  max-height: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -149,8 +151,124 @@ footer{
 }
 
 @media all and (min-width:720px){
-.profile-img{
-}
+
+  .container{
+    display: grid;
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: auto auto;
+    align-items: center;
+    grid-gap: 10px;
+    padding-bottom: 200px;
+    }
+  
+  header{
+    grid-column: 1/-1;
+  }
+  
+  img{
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    text-align: center;
+    padding: 10px;
+  }
+  
+  h2{
+    grid-column:2/-1;
+    grid-row:2;
+  }
+  
+  #movements, #media, #networks, #deliberation, #charity{
+    grid-column:2;
+  }
+  
+  .profile-img{
+    grid-column: 1;
+  }
+  
+  .news-img{
+    grid-column: 1;
+    /* grid-row: 3; */
+    width:90%;
+  }
+  
+  .news-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+  
+  .social-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+  
+  .network-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+  
+  .diss-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+  
+  .charity-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+  
+  .socialmedia-img{
+    grid-column: 1;
+    width:90%;
+  }
+  
+  .network-img{
+    grid-column:1;
+    width:90%;
+  }
+  
+  .diss-img{
+    grid-column:1;
+    width:90%;
+  }
+  
+  .charity-img{
+    grid-column:1;
+    width:90%;
+  }
+  
+  /* iframe{
+    grid-column: 2/span 2;
+    grid-row: 3;
+    width: 800px;
+    max-width: 100%;
+    height: 1000px;
+    max-height: 100%;
+    margin-top: 0px;
+  } */
+
+  iframe{
+    grid-column: 2/span 2;
+    grid-row: 3;
+    width: 600px;
+    max-width: 80%;
+    height: 400px;
+    max-height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+  }
+  
+  
+  form{
+    grid-column: 2/ span 2;
+    grid-row: 2;
+    font-size: 16px;
+  }
+  .text {
+    grid-column: 2/-2;
+  }
 
 }
 
@@ -258,7 +376,7 @@ h2{
   width:90%;
 }
 
-iframe{
+/* iframe{
   grid-column: 2/ span 2;
   grid-row: 3;
   width: 800px;
@@ -266,7 +384,21 @@ iframe{
   height: 1000px;
   max-height: 100%;
   margin-top: 0px;
+} */
+
+iframe{
+  grid-column: 2/span 2;
+  grid-row: 3;
+  width: 800px;
+  max-width: 100%;
+  height: 1000px;
+  max-height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
 }
+
 
 form{
   grid-column: 2/ span 2;
@@ -300,4 +432,3 @@ form{
   .skip a:focus{
     top:0;
   }
-}
