--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   }
 
 a{
-  color: #ff003f;
+  color: darkred;
   text-decoration: none;
 }
 a:hover{
@@ -15,12 +15,8 @@ a:hover{
 }
 nav{
   background-color: rgb(48, 55, 103);
-  display: flex;
-  flex-direction: column;
-  flex-flow: row wrap;
-  justify-content: center;
-  text-align: center;
 }
+
 nav a{
   display: block;
   color: white;
@@ -43,7 +39,7 @@ h1{
   padding: 30px;
 }
 P{
-padding:5px;
+padding:10px;
 }
 
 .active-page{
@@ -88,15 +84,18 @@ img{
   margin-left: auto;
   margin-right: auto;
   width:50%;
+  padding-top: 15px;
   text-align:center;
-  padding:10px;
 }
 
 iframe{
+  border: 2px solid black;
+  grid-column: 1/1;
+  grid-row: 3;
   width: 600px;
   max-width: 80%;
   height: 400px;
-  max-height: 80%;
+  max-height: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -104,7 +103,7 @@ iframe{
 }
 
 button{
-  background-color: #ff003f;
+  background-color: darkred;
   border: none;
   color: white;
   padding: 15px 30px;
@@ -140,8 +139,9 @@ h3{
   margin-top: 30px;
   font-size: 22px;
 }
+
 h4{
-  margin-top: 20px;
+  margin-top: 10px;
 }
 .service ul li{
   margin-top: 10px;
@@ -152,23 +152,277 @@ footer{
   text-align: center;
   padding: 30px;
 }
+footer p{
+  font-size: 18px;
+}
 
 @media all and (min-width:720px){
 
+  .container{
+    display: grid;
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: auto auto;
+    align-items: center;
+    grid-gap: 10px;
+    padding-bottom: 200px;
+    }
+
+  header{
+    grid-column: 1/-1;
+  }
+
+  img{
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    text-align: center;
+  }
+
+  h2{
+    grid-column:2/-1;
+    grid-row:2;
+  }
+  nav li{
+    font-size: 25px;
+  }
+
+  #movements, #media, #networks, #deliberation, #charity{
+    grid-column:2;
+  }
+
+  .profile-img{
+    grid-column: 1;
+  }
+
+  .news-img{
+    grid-column: 1;
+    /* grid-row: 3; */
+    width:100%;
+    align-self: flex-start;
+  }
+
+  .news-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+
+  .social-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+
+  .network-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+
+  .diss-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+
+  .charity-text{
+    grid-column:2;
+    /* grid-row:3; */
+  }
+
+  .socialmedia-img{
+    grid-column: 1;
+    width:100%;
+    align-self: flex-start;
+  }
+
+  .network-img{
+    grid-column:1;
+    width:100%;
+    align-self: flex-start;
+  }
+
+  .diss-img{
+    grid-column:1;
+    width:100%;
+    align-self: flex-start;
+  }
+
+  .charity-img{
+    grid-column:1;
+    width:100%;
+    align-self: flex-start;
+  }
+
+  /* iframe{
+    grid-column: 2/span 2;
+    grid-row: 3;
+    width: 800px;
+    max-width: 100%;
+    height: 1000px;
+    max-height: 100%;
+    margin-top: 0px;
+  } */
+
+  iframe{
+    grid-column: 2/span 2;
+    grid-row: 3;
+    width: 600px;
+    max-width: 80%;
+    height: 400px;
+    max-height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+  }
+
+
+  form{
+    grid-column: 2/ span 2;
+    grid-row: 2;
+    font-size: 16px;
+  }
+  .text {
+    grid-column: 2/-2;
+  }
+  footer p{
+    font-size: 20px;
+  }
 
 }
 
 @media all and (min-width:1200px){
 
-  /* .nav-links{
-    display:flex;
-    align-items: flex-end;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-  } */
-
+nav{
+  padding: 20px;
+  padding-left: 15%;
+  padding-right: 15%;
 }
+nav p{
+  font-size: 20px;
+}
+.nav-links{
+  display:flex;
+  align-items: flex-end;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+}
+nav ul{
+    /* display:flex; */
+    font-size: 25px;
+  }
+
+.container{
+  display: grid;
+  grid-template-rows: auto auto auto auto auto;
+  grid-template-columns: 1fr 2fr 3fr 1fr;
+  align-items: center;
+  grid-gap: 10px;
+  padding-bottom: 200px;
+  }
+
+header{
+  grid-column: 1/-1;
+}
+
+img{
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  text-align: center;
+  padding: 10px;
+}
+
+h2{
+  grid-column:2/-1;
+  grid-row:2;
+}
+
+#movements, #media, #networks, #deliberation, #charity{
+  grid-column:3;
+}
+
+.profile-img{
+  grid-column: 2;
+}
+
+.news-img{
+  grid-column: 2;
+  /* grid-row: 3; */
+}
+
+.news-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.social-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.network-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.diss-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.charity-text{
+  grid-column:3;
+  /* grid-row:3; */
+}
+
+.socialmedia-img{
+  grid-column: 2;
+}
+
+.network-img{
+  grid-column:2;
+}
+
+.diss-img{
+  grid-column:2;
+}
+
+.charity-img{
+  grid-column:2;
+}
+
+/* iframe{
+  grid-column: 2/ span 2;
+  grid-row: 3;
+  width: 800px;
+  max-width: 100%;
+  height: 1000px;
+  max-height: 100%;
+  margin-top: 0px;
+} */
+
+iframe{
+  grid-column: 2/span 2;
+  grid-row: 3;
+  width: 800px;
+  max-width: 100%;
+  height: 1000px;
+  max-height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+}
+
+
+form{
+  grid-column: 2/ span 2;
+  grid-row: 2;
+  font-size: 16px;
+}
+.text {
+  grid-column: 2/-2;
+}
+
 
 
 
@@ -192,4 +446,3 @@ footer{
   .skip a:focus{
     top:0;
   }
-}
