--- a/style/style.css
+++ b/style/style.css
@@ -110,11 +110,15 @@ button{
   text-align: center;
   text-decoration: none;
   display: block;
-  font-size: 16px;
+  font-size: 18px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
   margin-bottom: 60px;
+}
+button:hover{
+  background-color: darkred;
+  opacity: 0.8;
 }
 .container{
   padding: 20px;
@@ -158,114 +162,74 @@ footer p{
 
 @media all and (min-width:720px){
 
-  .container{
+  /* .container{
     display: grid;
     grid-template-rows: auto auto auto auto auto;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     grid-gap: 10px;
     padding-bottom: 200px;
-    }
-
+    } */
+/*
   header{
-    grid-column: 1/-1;
-  }
+    grid-row: 1;
+  } */
 
   img{
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
-    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 50%;
   }
 
-  h2{
-    grid-column:2/-1;
-    grid-row:2;
-  }
   nav li{
     font-size: 25px;
   }
 
-  #movements, #media, #networks, #deliberation, #charity{
-    grid-column:2;
-  }
-
   .profile-img{
-    grid-column: 1;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    align-self: flex-start;
+    margin-top: 20px;
   }
 
   .news-img{
-    grid-column: 1;
-    /* grid-row: 3; */
-    width:100%;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
     align-self: flex-start;
+
   }
 
-  .news-text{
-    grid-column:2;
-    /* grid-row:3; */
-  }
-
-  .social-text{
-    grid-column:2;
-    /* grid-row:3; */
-  }
-
-  .network-text{
-    grid-column:2;
-    /* grid-row:3; */
-  }
-
-  .diss-text{
-    grid-column:2;
-    /* grid-row:3; */
-  }
-
-  .charity-text{
-    grid-column:2;
-    /* grid-row:3; */
-  }
 
   .socialmedia-img{
-    grid-column: 1;
     width:100%;
     align-self: flex-start;
   }
 
   .network-img{
-    grid-column:1;
     width:100%;
     align-self: flex-start;
   }
 
   .diss-img{
-    grid-column:1;
     width:100%;
     align-self: flex-start;
   }
 
   .charity-img{
-    grid-column:1;
     width:100%;
     align-self: flex-start;
   }
 
-  /* iframe{
-    grid-column: 2/span 2;
-    grid-row: 3;
-    width: 800px;
-    max-width: 100%;
-    height: 1000px;
-    max-height: 100%;
-    margin-top: 0px;
-  } */
-
   iframe{
-    grid-column: 2/span 2;
+    grid-column: 1/span 2;
     grid-row: 3;
     width: 600px;
     max-width: 80%;
-    height: 400px;
+    height: 600px;
     max-height: 100%;
     display: block;
     margin-left: auto;
@@ -275,13 +239,11 @@ footer p{
 
 
   form{
-    grid-column: 2/ span 2;
+    grid-column: 1/ span 2;
     grid-row: 2;
     font-size: 16px;
   }
-  .text {
-    grid-column: 2/-2;
-  }
+
   footer p{
     font-size: 20px;
   }
@@ -342,6 +304,8 @@ h2{
 
 .profile-img{
   grid-column: 2;
+  width: 100%;
+  margin-top: 50px;
 }
 
 .news-img{
@@ -403,9 +367,9 @@ h2{
 iframe{
   grid-column: 2/span 2;
   grid-row: 3;
-  width: 800px;
+  width: 1050px;
   max-width: 100%;
-  height: 1000px;
+  height: 750px;
   max-height: 100%;
   display: block;
   margin-left: auto;
